# video-automation-analyzer

./: .gitignore  CLAUDE.md  README.md  install.bat  install.sh
.claude/skills/video-automation-analyzer/: .gitignore  README.md  SKILL.md  TEST_REPORT.md  VALIDATION_REPORT.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  validate_skill.sh
.claude/skills/video-automation-analyzer/docs/: advanced-config.md  best-practices.md  troubleshooting.md
.claude/skills/video-automation-analyzer/docs/reference/: architecture.md  business-value.md  claude_analyzer.md  development-guide.md  requirements.md  script_generator.md  server.md  video_processor.md
.claude/skills/video-automation-analyzer/evaluations/: README.md  eval_form_filling.json  eval_login_workflow.json  eval_screenshot_analysis.json
.claude/skills/video-automation-analyzer/examples/: usage.md
.claude/skills/video-automation-analyzer/scripts/: README.md  analyze_video.py  extract_frames.py  health_check.py  validate_output.py
.claude/skills/video-automation-analyzer/src/templates/: manual.md.jinja2  playwright.js.jinja2  selenium.py.jinja2  windows_mcp.yml.jinja2
.claude/skills/video-automation-analyzer/src/video_analyzer/: __init__.py  claude_analyzer.py  models.py  script_generator.py  server.py  video_processor.py
.claude/skills/video-automation-analyzer/tests/: conftest.py  test_claude_analyzer.py  test_generated_syntax.py  test_integration.py  test_script_generator.py  test_video_processor.py
.claude/skills/video-automation-analyzer/tests/fixtures/: create_test_data.py
