[tool.poetry]
name = "video-automation-analyzer"
version = "0.1.0"
description = "Analyze screen recordings to generate automation scripts"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "video_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
claude-agent-sdk = "^0.1.6"
mcp = "^1.3.1"
opencv-python = "^4.10.0"
pillow = "^10.4.0"
pydantic = "^2.10.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
